# Promptly

./: .env  .gitignore  pyproject.toml  requirements.txt
accounts/: serializers.py  urls.py  views.py
ai/: app.py  graph_builder.py  main.py
ai/agents/: account_agent.py  audio_analyzer.py
ai/supervisor/: supervisor_agent.py
ai/tools/: audio_processor.py  pdf_processor.py  qna_on_account_pdf.py  qna_with_audio.py
config/: settings.py  urls.py
